@@ -1,3 +1,6 @@
+2002-12-13  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
+	* anjuta.glade, src/anjuta-tools.c: Added user params to tools.
+
 2002-12-12  Naba Kumar <naba@gnome.org>
 
 	* anjuta-tools.[h,c], commands.c: Used the tools help of
